Fix squished user avatars on reviews and threads

--- a/app/scss/comments.scss
+++ b/app/scss/comments.scss
@@ -28,9 +28,11 @@
 	}
 
 	.user-photo {
+		display: inline-block;
 		width: 60px;
 		height: 60px;
 		object-fit: cover;
+		aspect-ratio: 1;
 	}
 
 	.status-update p {
