--- a/app/scss/packages.scss
+++ b/app/scss/packages.scss
@@ -85,3 +85,10 @@
 	background-color: #303030;
 	border-radius: .3rem;
 }
+
+.mini-user-photo {
+	display: inline-block;
+	aspect-ratio: 1;
+	max-height: 1em;
+	filter: none !important;
+}
